# brokk-cli

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  build.gradle.kts  main.py  pyproject.toml  pytest  pytest_output.txt  tmp_git_inspect.py
.github/workflows/: ci.yml  pypi.yml
brokk-code/brokk-code/tests/: test_chat_panel.py
brokk-code/tests/: test_chat_panel.py  test_welcome.py
brokk_code/: AGENTS.md  __main__.py  acp_server.py  anvil_config.py  anvil_launcher.py  app.py  avante_config.py  bifrost_launcher.py  event_utils.py  executor.py  git_utils.py  headless_anvil.py  intellij_config.py  mcp_config.py  mcp_launcher.py  nvim_config.py  nvim_init_patch.py  plugin_config.py  prompt_history.py  release_resolver.py  review_models.py  runtime_utils.py  rust_acp_install.py  session_persistence.py  settings.py  settings_modal.py  token_format.py  uv_utils.py  welcome.py  workspace.py  zed_config.py
brokk_code/modals/: __init__.py  commands_modal.py
brokk_code/styles/: app.tcss  review_panel.tcss
brokk_code/widgets/: brokk_defense.py  chat_panel.py  context_panel.py  dependencies_panel.py  review_panel.py  status_line.py  tasklist_panel.py  token_bar.py
tests/: conftest.py  test_acp_profiles.py  test_acp_server.py  test_anvil_config.py  test_anvil_launcher.py  test_api_key_relaunch.py  test_app_cost.py  test_autocommit_toggle.py  test_avante_config.py  test_bifrost_launcher.py  test_brokkapp_shutdown.py  test_chat_panel.py  test_chat_panel_layout.py  test_cli_modes.py  test_commit_command.py  test_cwd_isolation.py  test_dependency_name_derivation.py  test_executor_add_context_text_validation.py  test_executor_download.py  test_executor_payload.py  test_executor_pr_review.py  test_executor_resilience.py  test_executor_sessions.py  test_executor_settings.py  test_executor_start.py  test_executor_streaming.py  test_footer_removed.py  test_github_auth.py  test_headless_anvil.py  test_intellij_config.py  test_login_logout_commands.py  test_main.py  test_mcp_config.py  test_mcp_launcher.py  test_mode_toggle.py  test_model_command_menu.py  test_model_selector.py  test_nvim_config.py  test_nvim_init_patch.py  test_openai_auth.py  (+34 more)
