[project]
name = "brokk"
version = "0.1.1"
description = "AI-native code platform for million-line repos with fragment-level context management and code intelligence"
license = { text = "Proprietary" }
classifiers = [
    "License :: Other/Proprietary License",
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.25.0",
    "agent-client-protocol>=0.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
brokk = "brokk_code.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brokk_code"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = ["-p", "pytest_asyncio"]
markers = [
    "asyncio: marks tests as asyncio-compatible",
]
