[project]
name = "brokk"
dynamic = ["version"]
description = "AI-native code platform for million-line repos with fragment-level context management and code intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "foundev", email = "86598053+foundev@users.noreply.github.com" },
]
maintainers = [
    { name = "foundev", email = "86598053+foundev@users.noreply.github.com" },
]
keywords = [
    "acp",
    "agent-client-protocol",
    "ai",
    "brokk",
    "cli",
    "code-intelligence",
    "coding-agent",
    "developer-tools",
    "mcp",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/BrokkAi/brokk-cli"
Repository = "https://github.com/BrokkAi/brokk-cli"
Issues = "https://github.com/BrokkAi/brokk-cli/issues"
Documentation = "https://github.com/BrokkAi/brokk-cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.1",
]

[project.scripts]
brokk = "brokk_code.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.bifrost",
    "/.pytest_cache",
    "/.uv-cache",
    "/.venv",
    "/dist",
]

[tool.hatch.build.targets.wheel]
packages = ["brokk_code"]

[tool.hatch.version]
path = "brokk_code/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = ["-p", "pytest_asyncio"]
markers = [
    "asyncio: marks tests as asyncio-compatible",
]
